--- a/assithree/index.html
+++ b/assithree/index.html
@@ -21,17 +21,16 @@
       P E R F U M E
     </h4>
     <h1 style="font-family: Fraunces;">
-      Gabrielle Essence <br> Eau De Parfum
+      Gabrielle <br> Essence Eau <br>De Parfum
     </h1>
     <p style="font-family :Montserrat;">
-      A floral, solar and voluptuous interpretation composed by Olivier Polge,Perfumer-Creator for the House of CHANEL.
+      A floral, solar and voluptuous interpretation composed by<br> Olivier Polge,Perfumer-Creator <br>for the House of CHANEL.
     </p>
     <div class="price-flex">
     <h2>
       <b>
         $149.99 
-      </b>
-      
+      </b> 
     </h2>
     <h5>
       $169.99
